--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -32,8 +33,6 @@
     "styled-components": "^5"
   },
   "devDependencies": {
-    "@types/node": "20.6.2",
-    "babel-plugin-styled-components": "^2.1.4",
-    "typescript": "5.2.2"
+    "babel-plugin-styled-components": "^2.1.4"
   }
 }
